fix: wrap long text in navigation tree (#1101)

--- a/packages/mandelbrot/assets/scss/components/_tree.scss
+++ b/packages/mandelbrot/assets/scss/components/_tree.scss
@@ -1,7 +1,3 @@
-.Tree {
-    white-space: nowrap;
-}
-
 .Tree-header {
     display: flex;
     align-items: center;
@@ -131,6 +127,7 @@
 
         .Tree-entityLink {
             @include padding-inline(start, ($i * 1rem));
+            @include padding-inline(end, ($i * 1rem));
         }
     }
 }
